alignment fixes

--- a/src/components/InventoryListCard/InventoryListCard.scss
+++ b/src/components/InventoryListCard/InventoryListCard.scss
@@ -30,7 +30,7 @@
             border-bottom: 1px solid $secondary-color-Cloud;
             flex-wrap: none;
             align-items: center;
-            // justify-content: space-between;
+            justify-content: space-between;
             padding: 1rem 2rem;
 
 
@@ -175,6 +175,7 @@
         @include tablet {
             margin: 0;
             width: 2.25rem;
+            margin-right: 1rem;
         }
     }
 
