--- a/src/components/WarehouseListCard/WarehouseListCard.scss
+++ b/src/components/WarehouseListCard/WarehouseListCard.scss
@@ -53,7 +53,7 @@
 
     }
 
-    &__item-container {
+    &__item-container-alt {
         margin-bottom: 1rem;
 
         @include tablet {
@@ -97,9 +97,8 @@
         @include textStyle($primary-color-Instock-Black, 0.875rem, 1.375rem, 400);
     }
 
-    &__status-container {
+    &__status-container-alt {
         margin-bottom: 1rem;
-        width: 10rem;
 
         @include tablet {
             margin: 0;
